# mfeed

./: CMakeLists.txt  README.md
flatbuffers/: rss_data.fbs
misc/: mfeed.desktop
src/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
src/flatbuffers/: rss_data_generated.h
src/gui/: main_ui.cpp  main_ui.hpp
src/imgui/: imgui_impl_opengl3.cpp
src/rss/: data.cpp  data.hpp  downloader.cpp  downloader.hpp  extract.cpp  extract.hpp  feed.cpp  feed.hpp  link.cpp  link.hpp
